--- a/about.html
+++ b/about.html
@@ -4,6 +4,16 @@
 
   </head>
   <body>
-
+    <header>
+      <h1>Vincent's Interests</h1>
+      <p>Stories from his favorite pieces of media.</p>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
   </body>
 </html>
