Adding CSS to Blog

--- a/about.html
+++ b/about.html
@@ -1,36 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Vincent</title>
-  </head>
-  <body>
-    <header>
-      <h1>Vincent's Interests</h1>
-      <p>Stories from his favorite pieces of media.</p>
-      <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
-    <section class="about">
-      <h2>About me!</h2>
-
-      <img src="Images/vincentle.jpeg" alt="Photo of Vincent Le, the author.">
-      <p>Hey, I'm Vincent! I'm headed into my second year at Michigan State University, studying Information Science. I love to play video games, listen to music, read, workout, and run! This blog is a way for me to share with people interesting bits and pieces from my hobbies to share my love for media with others!</p>
-
-      <p>I'm currently interning at a tech startup, working as a UI/UX designer! I've been passionate about aesthetics and design since I was young, always asking why things are put together the way they are and what its appearance communicates to people! From working on user interfaces for ROBLOX games to designing for an application that's going to be put into the market, I've come a long way. I hope that higher education will provide me a strong foundational knowledge that will set me up for a career in UI/UX design!</p>
-
-      <h3>Fun Facts</h3>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About Vincent</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+</head>
+<body>
+  <header>
+    <h1>Vincent's Interests</h1>
+    <p>Stories from his favorite pieces of media.</p>
+    <nav>
       <ul>
-        <li>I share a Birthday with Kanye West (maybe not the best person to be birthday buddies with...)</li>
-        <li>At my high school, I was part of the &lt;1% of Asians enrolled</li>
-        <li>I've held a presence on the internet since I was 6! (for better or for worse)</li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
-    </section>
-  </body>
+    </nav>
+  </header>
+
+  <div class="main-layout">
+    <div class="sidebar"></div>
+
+    <div class="content">
+      <section class="about">
+        <h2>About me!</h2>
+
+        <img src="Images/vincentle.jpeg" alt="Photo of Vincent Le, the author.">
+
+        <p>Hey, I'm Vincent! I'm headed into my second year at Michigan State University, studying Information Science. I love to play video games, listen to music, read, workout, and run! This blog is a way for me to share with people interesting bits and pieces from my hobbies to share my love for media with others!</p>
+
+        <p>I'm currently interning at a tech startup, working as a UI/UX designer! I've been passionate about aesthetics and design since I was young, always asking why things are put together the way they are and what its appearance communicates to people! From working on user interfaces for ROBLOX games to designing for an application that's going to be put into the market, I've come a long way. I hope that higher education will provide me a strong foundational knowledge that will set me up for a career in UI/UX design!</p>
+
+        <h3>Fun Facts</h3>
+        <ul>
+          <li>I share a Birthday with Kanye West (maybe not the best person to be birthday buddies with...)</li>
+          <li>At my high school, I was part of the &lt;1% of Asians enrolled</li>
+          <li>I've held a presence on the internet since I was 6! (for better or for worse)</li>
+        </ul>
+      </section>
+    </div>
+
+    <div class="sidebar"></div>
+  </div>
+</body>
 </html>
