--- a/contact.html
+++ b/contact.html
@@ -1,43 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Vincent</title>
-  </head>
-  <body>
-    <header>
-      <h1>Vincent's Interests</h1>
-      <p>Stories from his favorite pieces of media.</p>
-      <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contact Vincent</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+</head>
+<body>
+  <header>
+    <h1>Vincent's Interests</h1>
+    <p>Stories from his favorite pieces of media.</p>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
   </header>
-    <form>
-      <h2>Contact me!</h2>
 
-      <label for="name">Name</label>
-      <input type="text" id="name" name="name" required>
+  <div class="main-layout">
+    <div class="sidebar"></div>
 
-      <label for="email">Email Address</label>
-      <input type="email" id="email" name="email" required>
+    <div class="content">
+      <form>
+        <h2>Contact me!</h2>
 
-      <label for="reason">Reason for Contact</label>
-      <select id="reason" name="reason" required>
-        <option value="">--Please choose an option--</option>
-        <option value="hi">Chat with me</option>
-        <option value="contractor">For contracting</option>
-        <option value="interview">Interview me</option>
-      </select>
+        <label for="name">Name</label>
+        <input type="text" id="name" name="name" required>
 
-      <label for="message">Message</label>
-      <textarea id="message" name="message" placeholder="Type your comments here..."></textarea>
+        <label for="email">Email Address</label>
+        <input type="email" id="email" name="email" required>
 
-      <button type="submit">Send Message</button>
-    </form>
-  </body>
+        <label for="reason">Reason for Contact</label>
+        <select id="reason" name="reason" required>
+          <option value="">--Please choose an option--</option>
+          <option value="hi">Chat with me</option>
+          <option value="contractor">For contracting</option>
+          <option value="interview">Interview me</option>
+        </select>
+
+        <label for="message">Message</label>
+        <textarea id="message" name="message" placeholder="Type your comments here..."></textarea>
+
+        <button type="submit">Send Message</button>
+      </form>
+    </div>
+
+    <div class="sidebar"></div>
+  </div>
+</body>
 </html>
